--- a/panoLibrary/src/main/AndroidManifest.xml
+++ b/panoLibrary/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.hsgn.vr">
+<manifest package="com.pano.player">
 
     <application>
     </application>
