--- a/panoLibrary/build.gradle
+++ b/panoLibrary/build.gradle
@@ -22,31 +22,6 @@ android {
     }
     sourceSets { main { jni.srcDirs = ['src/main/jni', 'src/main/jniLibs/'] } }
 }
-//ext {
-//    bintrayRepo = 'android'
-//    bintrayName = 'tweenengine'
-//
-//    publishedGroupId = 'cn.quinnxiao.android'
-//    libraryName = 'tweenengine'
-//    artifact = 'tweenenginelibrary'
-//
-//    libraryDescription = ''
-//
-//    siteUrl = 'https://github.com/HuangLiGuo/TweenEngine'
-//    gitUrl = 'https://github.com/HuangLiGuo/TweenEngine.git'
-//
-//    libraryVersion = '1.0.0'
-//
-//    developerId = ''
-//    developerName = ''
-//    developerEmail = ''
-//
-//    licenseName = 'The Apache Software License, Version 2.0'
-//    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-//    allLicenses = ["Apache-2.0"]
-//}
-//apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
-//apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -56,72 +31,9 @@ dependencies {
     compile files('libs/lightcycle.jar')
     compile files('libs/panoplayer.jar')
     compile files('libs/sunjce.jar')
+    compile files('libs/pano-core-1.0.2.jar')
     compile 'com.squareup.okhttp:okhttp:2.7.5'
     compile 'com.squareup.okio:okio:1.9.0'
 }
 
 
-def siteUrl = 'https://github.com/xiaoqiu1235/panoLibrary'   // 项目的主页
-def gitUrl = 'https://github.com/xiaoqiu1235/panoLibrary.git'   // Git仓库的url
-group = "cn.hsgn.android"            // Maven Group ID for the artifact，一般填你唯一的包名
-install {
-    repositories.mavenInstaller {
-        // This generates POM.xml with proper parameters
-        pom {
-            project {
-                packaging 'aar'
-                // Add your description here
-                name ''     //项目的描述 你可以多写一点
-                url siteUrl
-                // Set your license
-                licenses {
-                    license {
-                        name 'The Apache Software License, Version 2.0'
-                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-                    }
-                }
-                developers {
-                    developer {
-                        id ''        //填写的一些基本信息
-                        name ''
-                        email ''
-                    }
-                }
-                scm {
-                    connection gitUrl
-                    developerConnection gitUrl
-                    url siteUrl
-                }
-            }
-        }
-    }
-}
-task sourcesJar(type: Jar) {
-    from android.sourceSets.main.java.srcDirs
-    classifier = 'sources'
-}
-task javadoc(type: Javadoc) {
-    source = android.sourceSets.main.java.srcDirs
-    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
-}
-task javadocJar(type: Jar, dependsOn: javadoc) {
-    classifier = 'javadoc'
-    from javadoc.destinationDir
-}
-artifacts {
-}
-Properties properties = new Properties()
-properties.load(project.rootProject.file('local.properties').newDataInputStream())
-bintray {
-    user = properties.getProperty("bintray.user")
-    key = properties.getProperty("bintray.apikey")
-    configurations = ['archives']
-    pkg {
-        repo = "android"
-        name = "panoLibrary"    //发布到JCenter上的项目名字
-        websiteUrl = siteUrl
-        vcsUrl = gitUrl
-        licenses = ["Apache-2.0"]
-        publish = true
-    }
-}
